--- a/app/src/public/playground.html
+++ b/app/src/public/playground.html
@@ -154,19 +154,7 @@
           <td><u>p</u>aste</td>
         </tr>
       </tbody>
-      <tbody>
-        <tr>
-          <td class="key hidden display-60">
-            <div>dw</div>
-          </td>
-          <td class="hidden display-60"><u>d</u>elete <u>w</u>ord</td>
-          <td class="key insert hidden display-72">
-            <div>cw</div>
-          </td>
-          <td class="hidden display-72"><u>c</u>hange <u>w</u>ord</td>
-        </tr>
-      </tbody>
-      <tbody class="hidden display-81">
+      <tbody class="hidden display-60">
         <tr>
           <td class="key">
             <div>D</div>
@@ -178,24 +166,24 @@
           <td><u>C</u>hange rest of line</td>
         </tr>
       </tbody>
-      <tbody class="hidden display-90">
+      <tbody class="hidden display-69">
         <tr>
           <td colspan="4">
             <hr />
           </td>
         </tr>
         <tr>
-          <td class="key hidden display-90">
+          <td class="key">
             <div>/</div>
           </td>
-          <td class="hidden display-90">find</td>
-          <td class="key hidden display-90">
+          <td>find</td>
+          <td class="key">
             <div>n</div>
           </td>
-          <td class="hidden display-90"><u>n</u>ext</td>
+          <td><u>n</u>ext</td>
         </tr>
       </tbody>
-      <tbody class="hidden display-102">
+      <tbody class="hidden display-81">
         <tr>
           <td class="key">
             <div>*</div>
@@ -203,7 +191,24 @@
           <td>find <i>this</i> word</td>
         </tr>
       </tbody>
-      <tbody class="hidden display-114">
+      <tbody class="hidden display-93">
+        <tr>
+          <td colspan="4">
+            <hr />
+          </td>
+        </tr>
+        <tr>
+          <td class="key">
+            <div>dw</div>
+          </td>
+          <td><u>d</u>elete <u>w</u>ord</td>
+          <td class="key insert">
+            <div>cw</div>
+          </td>
+          <td><u>c</u>hange <u>w</u>ord</td>
+        </tr>
+      </tbody>
+      <tbody class="hidden display-106">
         <tr>
           <td colspan="4">
             <hr />
